cmake_minimum_required(VERSION 3.16)
project(Program_practice)

set(CMAKE_CXX_STANDARD 14)

add_executable(20200507-1 20200507/20200507-1.cpp)
add_executable(20200507-2 20200507/20200507-2.cpp)
add_executable(20200507-3 20200507/20200507-3.cpp)
add_executable(20200507-4 20200507/20200507-4.cpp)
add_executable(20200514-1 20200514/20200514-1.cpp)
add_executable(20200514-2 20200514/20200514-2.cpp)
add_executable(20200514-3 20200514/20200514-3.cpp)