cmake_minimum_required(VERSION 3.16)
project(Program_practice)

set(CMAKE_CXX_STANDARD 14)

add_executable(20200507-1 20200507/20200507-1.cpp)
add_executable(20200507-2 20200507/20200507-2.cpp)
add_executable(20200507-3 20200507/20200507-3.cpp)
add_executable(20200507-4 20200507/20200507-4.cpp)
add_executable(20200514-1 20200514/20200514-1.cpp)
add_executable(20200514-2 20200514/20200514-2.cpp)
add_executable(20200514-3 20200514/20200514-3.cpp)
add_executable(20200521-1 20200521/20200521-1.cpp)
add_executable(20200521-2 20200521/20200521-2.cpp)
add_executable(20200521-3 20200521/20200521-3.cpp)
add_executable(20200528-1 20200528/20200528-1.cpp)
add_executable(20200528-2 20200528/20200528-2.cpp)
add_executable(20200528-3 20200528/20200528-3.cpp)
add_executable(20200528-4 20200528/20200528-4.cpp)
add_executable(20200528-5 20200528/20200528-5.cpp)
add_executable(20200604-1 20200604/20200604-1.cpp)
add_executable(20200604-2 20200604/20200604-2.cpp)
add_executable(20200604-3 20200604/20200604-3.cpp 20200604/random.cpp)
add_executable(20200611-1 20200611/20200611-1.cpp)
add_executable(20200611-2 20200611/20200611-2.cpp)
add_executable(20200611-3 20200611/20200611-3.cpp)
add_executable(20200915-4 20200915/20200915-4.cpp)
add_executable(20200915-5 20200915/20200915-5.cpp)
add_executable(20200915-3 20200915/20200915-3.cpp)
add_executable(20200915-2 20200915/20200915-2.cpp)
add_executable(20200915-1 20200915/20200915-1.cpp)
add_executable(20200922-1 20200922/20200922-1.cpp)
add_executable(20200922-2 20200922/20200922-2.cpp)
add_executable(20200922-3 20200922/20200922-3.cpp)